--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,8 @@ jobs:
           command: |
             # Your code here
             cd frontend
-            npm install
-            npm run build
+            sudo npm install
+            sudo npm run build
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
@@ -64,8 +64,8 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm install
-            npm run build
+            sudo npm install
+            sudo npm run build
             exit 1
       - save_cache:
           paths: [backend/node_modules]
