--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - checkout
+      #- checkout
       - restore_cache:
           keys: [frontend-build]
       - run:
@@ -47,7 +47,7 @@ jobs:
             cd frontend
             npm install
             npm run build
-            exit 0
+            exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -56,7 +56,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - checkout
+      #- checkout
       - restore_cache:
           keys: [backend-build]
       - run:
@@ -66,7 +66,7 @@ jobs:
             cd backend
             npm install
             npm run build
-            exit 0
+            exit 1
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
