--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,8 @@ jobs:
             cd backend
             npm install
             npm run build
+            npm run audit fix
+            npm run fund
             exit 1
       - save_cache:
           paths: [backend/node_modules]
