--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,8 @@ jobs:
           command: |
             # Your code here
             cd frontend
-            npm install
+            npm cache clean -f
+            npm install -g n
             npm run build
             exit 1
       - save_cache:
@@ -32,7 +33,8 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm install
+            npm cache clean -f
+            npm install -g n
             npm run build
             exit 1
       - save_cache:
