--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             # Your code here
             cd frontend
             npm cache clean -f
-            npm install -g n
+            npm install
             npm run build
             exit 1
       - save_cache:
@@ -34,7 +34,7 @@ jobs:
             # Your code here
             cd backend
             npm cache clean -f
-            npm install -g n
+            npm install
             npm run build
             exit 1
       - save_cache:
