--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           command: |
             # Your code here
             cd frontend
-            npm cache clean -f
-            npm install
+
+            npm install -g n
             npm run build
             exit 1
       - save_cache:
@@ -33,8 +33,7 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm cache clean -f
-            npm install
+            npm install -g n
             npm run build
             exit 1
       - save_cache:
