--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,18 +58,44 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
       - checkout
-      # Restore from cache
       - restore_cache:
           keys: [backend-test]
-      # Your job code here
       - run:
           name: Run back-end test
           command: |
             cd backend
             npm install
             npm run test
+  
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-scan]
+      - run:
+          name: Run front-end scan
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-scan]
+      - run:
+          name: Run back-end scan
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
+
 
 workflows:
   default:
@@ -80,3 +106,7 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
+      - scan-frontend:
+          requires: [frontend-test]
+      - scan-backend:
+          requires: [backend-test]
