--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit --audit-level=criticalnpm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -94,6 +95,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm audit --audit-level=criticalnpm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
 
