--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit --audit-level=criticalnpm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -95,7 +95,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit --audit-level=criticalnpm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
 
 
