--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,3 +217,5 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
